# Juao

./: .gitignore  README.md  README_zh.md  build.gradle  settings.gradle
app/: build.gradle
example/: build.gradle
libandroidyuancache/: CMakeLists.txt  build.gradle
libandroidyuancache/src/androidTest/java/com/androidyuan/libcache/: BytesTransformTest.java  CacheConfigTest.java  ExampleInstrumentedTest.java  ParcelableTestCls.java  SrlzbTestCls.java
libandroidyuancache/src/main/: AndroidManifest.xml
libandroidyuancache/src/main/cpp/: jnientry.cpp  jnientry.h  logger.h
libandroidyuancache/src/main/java/com/androidyuan/libcache/: CacheConfig.java  FastHugeStorage.java  OnPopCompleteListener.java  StorageManager.java
libandroidyuancache/src/main/java/com/androidyuan/libcache/core/: BaseAssistant.java  BaseTicket.java  BytesTransform.java  CacheLog.java  Entry.java  HardMemUtils.java  ICacheAssistant.java  ICacheHelper.java  ITicket.java  ParcelableUtil.java  TicketStatus.java  UUIDHexGenerator.java
libandroidyuancache/src/main/java/com/androidyuan/libcache/data/: BitmapTicket.java  ParcelTicket.java  SerializableTicket.java
libandroidyuancache/src/main/java/com/androidyuan/libcache/diskcache/: DiskCacheHelper.java  DiskLruCache.java  StrictLineReader.java  Util.java
libandroidyuancache/src/main/java/com/androidyuan/libcache/fastcache/: FastLruCacheAssistant.java  FastLruCacheStatistics.java  NativeEntry.java  OnFulledListener.java
libandroidyuancache/src/test/java/com/androidyuan/libcache/: ExampleUnitTest.java  JNITest.java
(+58 files in other folders)
